--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ div.menu-outer {
 
 @media screen and (min-width: 64em) {
 	.main-content {
-		max-width: 95%;
+		max-width: 64rem;
 		padding: 2rem 6rem;
 		margin: 0 auto;
 		font-size: 1.1rem
